dbeaver/pro#6501 allow local repos